--- a/frontend/forms/OBSBasicSettings.ui
+++ b/frontend/forms/OBSBasicSettings.ui
@@ -3005,6 +3005,13 @@
                         </widget>
                        </item>
                        <item row="2" column="1">
+                        <widget class="QCheckBox" name="simpleRBFlush">
+                         <property name="text">
+                          <string>Basic.Settings.Output.ReplayBuffer.FlushAfterSave</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item row="3" column="1">
                         <widget class="QLabel" name="simpleRBEstimate">
                          <property name="text">
                           <string notr="true"/>
@@ -5738,7 +5745,14 @@
                             </property>
                            </widget>
                           </item>
-                          <item row="2" column="1">
+                          <item row="2" column="0">
+                           <widget class="QCheckBox" name="advRBFlush">
+                            <property name="text">
+                             <string>Basic.Settings.Output.ReplayBuffer.FlushAfterSave</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="3" column="1">
                            <widget class="QLabel" name="advRBEstimate">
                             <property name="text">
                              <string notr="true"/>
@@ -8800,6 +8814,7 @@
   <tabstop>simpleReplayBuf</tabstop>
   <tabstop>simpleRBSecMax</tabstop>
   <tabstop>simpleRBMegsMax</tabstop>
+  <tabstop>simpleRBFlush</tabstop>
   <tabstop>advOutTabs</tabstop>
   <tabstop>advOutTrack1</tabstop>
   <tabstop>advOutTrack2</tabstop>
@@ -8849,6 +8864,7 @@
   <tabstop>advOutTrack6Name</tabstop>
   <tabstop>advRBSecMax</tabstop>
   <tabstop>advRBMegsMax</tabstop>
+  <tabstop>advRBFlush</tabstop>
   <tabstop>scrollArea_50</tabstop>
   <tabstop>sampleRate</tabstop>
   <tabstop>channelSetup</tabstop>
